k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 3-tier-app-eks
  labels:
    app: frontend
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <AWS_ACCOUNT_ID>.dkr.ecr.us-west-2.amazonaws.com/3-tier-app-frontend:production-latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3-tier-app-eks
  annotations:
    appmesh.k8s.aws/virtualNode: frontend-vn
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
